--- a/Search Results Scraper/Final Search Scraper.ipynb
+++ b/Search Results Scraper/Final Search Scraper.ipynb
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#function to take a list of keywords and run TikTok search on all of them. Outputs a json file of the search terms as \n",
+    "#function to take a df of keywords and run TikTok search on all of them. Outputs a json file of the search terms as \n",
     "# keys and the list of 50 urls as values. \n",
     "def run_all_search_terms(search_terms_list):\n",
     "    result_dict = {}\n",
