--- a/search_results_scraper/Final Search Scraper.ipynb
+++ b/search_results_scraper/Final Search Scraper.ipynb
@@ -274,7 +274,9 @@
    "id": "8f4ccb0d-558c-424f-9f44-c615dc6533a4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#creating a testing chunk of 10 pyktok videos\n"
+   ]
   }
  ],
  "metadata": {
