--- a/search_results_scraper/Final Search Scraper.ipynb
+++ b/search_results_scraper/Final Search Scraper.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "a9ad55ad-4230-4ab6-a369-e866b6947c5a",
    "metadata": {},
    "outputs": [],
@@ -270,12 +270,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8f4ccb0d-558c-424f-9f44-c615dc6533a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Epidemics': {'year': '2021',\n",
+       "  'urls': ['https://www.tiktok.com/@doctormyro/video/7232326139858111790',\n",
+       "   'https://www.tiktok.com/@thesoberplug/video/7199113085502704939',\n",
+       "   'https://www.tiktok.com/@daniellesadvocacy/video/7292480321919159598']},\n",
+       " 'Public Health': {'year': '2021',\n",
+       "  'urls': ['https://www.tiktok.com/@declassifiedcollege/video/7308516761496784171',\n",
+       "   'https://www.tiktok.com/@nadiaselod/video/7332685812108152110',\n",
+       "   'https://www.tiktok.com/@yalesph/video/7279116633581309227']},\n",
+       " 'Vaccination and Immunization': {'year': '2021',\n",
+       "  'urls': ['https://www.tiktok.com/@tiktokkiddoc/video/7265084822991719723',\n",
+       "   'https://www.tiktok.com/@simplenursing/video/7266077970522000682',\n",
+       "   'https://www.tiktok.com/@goodrx/video/7135866160519630122']},\n",
+       " 'World Health Organization': {'year': '2021',\n",
+       "  'urls': ['https://www.tiktok.com/@onetruth100777/video/7236141305984863530',\n",
+       "   'https://www.tiktok.com/@krazedegen/video/7260471849480621358',\n",
+       "   'https://www.tiktok.com/@kendake_ntorotu_/video/7099576210782424366']}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#creating a testing chunk of 10 pyktok videos\n"
+    "#creating a testing chunk of 12 pyktok videos across 4 search terms in a subfolder within the parent directory\n",
+    "cwd = os.getcwd()\n",
+    "\n",
+    "with open ('results/urls2020.json', 'r') as f:\n",
+    "    new_json_dct = {}\n",
+    "    old_json_dct = json.load(f)\n",
+    "    for search_term in list(old_json_dct.keys())[:4]:\n",
+    "        search_term_dct = {}\n",
+    "        search_term_dct['year'] = '2021'\n",
+    "        search_term_dct['urls'] = old_json_dct[search_term]['urls'][:3]\n",
+    "        new_json_dct[search_term] = search_term_dct\n",
+    "\n",
+    "    with open ('pyktok_test.json', 'w') as outF:\n",
+    "        json.dump(new_json_dct, outF)\n",
+    "\n",
+    "new_json_dct"
    ]
   }
  ],
