--- a/compiling_data/Compiling Scraping Results.ipynb
+++ b/compiling_data/Compiling Scraping Results.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "786a048b-7ff3-430b-bc95-ac937dff1b3f",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "97504d93-79af-4236-987f-abd235d6ec32",
    "metadata": {},
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "bc4d533c-84aa-4cdb-b96e-4ec9c4ac0554",
    "metadata": {},
    "outputs": [],
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "743619ee-e386-4218-9270-fb7e4fdac5b7",
    "metadata": {},
    "outputs": [],
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "45bfc53c-5f0f-4d94-b8ef-7268fb70e1c2",
    "metadata": {},
    "outputs": [],
@@ -70,6 +72,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a3a8ed98-13cd-48e3-9e02-92c2ae83533f",
    "metadata": {},
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "8fdef9b0-9a47-4b72-8103-9d89b92d7f2f",
    "metadata": {},
    "outputs": [],
@@ -98,12 +101,20 @@
     "\n",
     "    for f in req_files:\n",
     "        #opening csv results file and downloading as pandas \n",
-    "        df = pd.read_csv(f'{path}/{f}')\n",
+    "       # fipa2 = f'{path}/{f}'\n",
+    "      #  print(fipa2)\n",
+    "        try:\n",
+    "            df = pd.read_csv(os.path.join(path, f))\n",
+    "        except: \n",
+    "            print(os.path.join(path, f))\n",
+    "        \n",
     "        year = f[7:11]\n",
     "        number = f[12:13]\n",
     "        for j in all_json_files:\n",
     "            if year in j:\n",
-    "                with open (f'{json_path}/{j}', 'r') as json_file:\n",
+    "                print(j)\n",
+    "                fipa = f'{json_path}/{j}'\n",
+    "                with open (fipa, 'r') as json_file:\n",
     "                    data = json.load(json_file)\n",
     "                    search_term_dct = get_ID_search_term(data)\n",
     "\n",
@@ -114,6 +125,7 @@
     "                            search_term_column.append(search_term_dct[id])\n",
     "                        except  Exception as e:\n",
     "                            print(f'{e}')\n",
+    "                            search_term_column.append('')\n",
     "                        \n",
     "                    df['search_term'] = search_term_column\n",
     "                    df['year'] = [year] * df.shape[0]\n",
@@ -142,10 +154,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "dbe99c2b-d9a0-49a8-9918-a8a3ea31ad8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "urls2022.json\n",
+      "urls2020.json\n",
+      "urls2020.json\n",
+      "urls2024.json\n",
+      "7232326139858111790\n",
+      "7199113085502704939\n",
+      "7292480321919159598\n",
+      "7308516761496784171\n",
+      "7332685812108152110\n",
+      "7279116633581309227\n",
+      "7265084822991719723\n",
+      "7266077970522000682\n",
+      "7135866160519630122\n",
+      "7236141305984863530\n",
+      "7260471849480621358\n",
+      "7099576210782424366\n",
+      "7232326139858111790\n",
+      "7199113085502704939\n",
+      "7292480321919159598\n",
+      "7308516761496784171\n",
+      "7332685812108152110\n",
+      "7279116633581309227\n",
+      "7265084822991719723\n",
+      "7266077970522000682\n",
+      "7135866160519630122\n",
+      "7236141305984863530\n",
+      "7260471849480621358\n",
+      "7099576210782424366\n",
+      "7232326139858111790\n",
+      "7199113085502704939\n",
+      "7292480321919159598\n",
+      "7308516761496784171\n",
+      "7332685812108152110\n",
+      "7279116633581309227\n",
+      "7265084822991719723\n",
+      "7266077970522000682\n",
+      "7135866160519630122\n",
+      "7236141305984863530\n",
+      "7260471849480621358\n",
+      "7099576210782424366\n",
+      "pyktok_csv_files/.DS_Store\n",
+      "urls2024.json\n",
+      "urls2023.json\n",
+      "urls2021.json\n",
+      "urls2023.json\n",
+      "urls2021.json\n"
+     ]
+    }
+   ],
    "source": [
     "modify_csv()"
    ]
@@ -167,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
