--- a/compiling_data/Compiling Scraping Results.ipynb
+++ b/compiling_data/Compiling Scraping Results.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "bc4d533c-84aa-4cdb-b96e-4ec9c4ac0554",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "743619ee-e386-4218-9270-fb7e4fdac5b7",
    "metadata": {},
    "outputs": [],
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "id": "45bfc53c-5f0f-4d94-b8ef-7268fb70e1c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_vid_id(filepath):\n",
+    "def add_vid_id(transcript_df):\n",
     "    all_ids = []\n",
-    "    transcript_df = pd.read_csv(filepath)\n",
+    "    #transcript_df = pd.read_csv(filepath)\n",
     "    for index, row in transcript_df.iterrows():\n",
     "        transc_file_name = row['File Name']\n",
     "        tfl = len(transc_file_name)\n",
@@ -93,6 +93,7 @@
     "    all_files = os.listdir(path)\n",
     "    req_files = [file for file in all_files if 'failed' not in file]\n",
     "\n",
+    "    #these files have all the terms for both chunks\n",
     "    json_path = 'json_result_files'\n",
     "    all_json_files = os.listdir(json_path)\n",
     "\n",
@@ -137,7 +138,7 @@
     "\n",
     "            if year == year_transcript and number == number_transcript:\n",
     "                transcript_df = add_vid_id(f'{transcript_path}/{t}')\n",
-    "                transcript_df\n",
+    "                #transcript_df\n",
     "                merged_df = pd.merge(df, transcript_df, on='video_id')\n",
     "\n",
     "                df.drop(columns=['video_id'])\n",
@@ -154,7 +155,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
+   "id": "9a98b4d7-ff6b-446e-bbe8-8b6c6f0f785f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_csv(year):\n",
+    "    print (f'STARTING FOR YEAR {year}')\n",
+    "    path = 'pyktok_csv_files'\n",
+    "    all_files = os.listdir(path)\n",
+    "    req_files = [file for file in all_files if 'failed' not in file]\n",
+    "\n",
+    "    pyktok_files = [filename for filename in req_files if year in filename]\n",
+    "    \n",
+    "    if len(pyktok_files) == 2:\n",
+    "        pyktok_chunk1 = pd.read_csv(os.path.join(path, pyktok_files[0]))\n",
+    "        pyktok_chunk2 = pd.read_csv(os.path.join(path, pyktok_files[1]))\n",
+    "        pyktok_chunks = pd.concat([pyktok_chunk1, pyktok_chunk2])\n",
+    "\n",
+    "    else: \n",
+    "        print(f'length of pyktok files is not 2')\n",
+    "    print(f'there should be two files, the filenames are {pyktok_files} and the number of files is: {len(pyktok_files)}')\n",
+    "\n",
+    "    #these files have all the terms for both chunks\n",
+    "    json_path = 'json_result_files'\n",
+    "    all_json_files = os.listdir(json_path)\n",
+    "    json_file = [j for j in all_json_files if year in j][0]\n",
+    "    print('json file is' + json_file)\n",
+    "\n",
+    "    #create dict \n",
+    "    with open (os.path.join(json_path, json_file), 'r') as jsonFile:\n",
+    "        data = json.load(jsonFile)\n",
+    "        search_term_dct = get_ID_search_term(data)\n",
+    "\n",
+    "    #transcript files read in\n",
+    "    transcript_path = 'transcript_csv_files'\n",
+    "    all_transcript_files = os.listdir(transcript_path)\n",
+    "    transcript_files = [t for t in all_transcript_files if year in t]\n",
+    "    print(f'no of transcript files found: {len(transcript_files)}')\n",
+    "\n",
+    "    if len(transcript_files) == 2:\n",
+    "        t_chunk1 = pd.read_csv(os.path.join(transcript_path, transcript_files[0]))\n",
+    "        t_chunk2 = pd.read_csv(os.path.join(transcript_path, transcript_files[1]))\n",
+    "        t_chunks = pd.concat([t_chunk1, t_chunk2])\n",
+    "\n",
+    "    print(f'there should be two files, the filenames are {pyktok_files} and the number of files is: {len(pyktok_files)}')\n",
+    "\n",
+    "    #adding search term and year to pyktok df\n",
+    "    print('adding search term and year to pyktok df')\n",
+    "    search_term_column = []\n",
+    "    for index, row in pyktok_chunks.iterrows():\n",
+    "        try:\n",
+    "            id = row['video_id']\n",
+    "            search_term_column.append(search_term_dct[id])\n",
+    "        except  Exception as e:\n",
+    "            print(f'{e}')\n",
+    "            print(f'could not find video id from json dict for video {row[\"video_id\"]}')\n",
+    "            search_term_column.append(None)\n",
+    "                        \n",
+    "    pyktok_chunks['search_term'] = search_term_column\n",
+    "    pyktok_chunks['year'] = [year] * pyktok_chunks.shape[0]\n",
+    "\n",
+    "    #add video id as column to transcript dfs \n",
+    "    transcript_df = add_vid_id(t_chunks)\n",
+    "\n",
+    "    #merge the pyktok and t dfs\n",
+    "\n",
+    "    pyktok_chunks.merge(transcript_df, on='video_id', how='inner')\n",
+    "    printI\n",
+    "\n",
+    "    #pyktok_chunks.drop(columns=['video_id'])\n",
+    "    #for col in transcript_df.columns:\n",
+    "    #    pyktok_chunks = pyktok_chunks.assign(new_column_name=transcript_df[column_name])\n",
+    "        #pyktok_chunks[col] = transcript_df[col]    \n",
+    "            \n",
+    "\n",
+    "    pyktok_chunks.to_csv(f'final_result_{year}.csv')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "dbe99c2b-d9a0-49a8-9918-a8a3ea31ad8f",
    "metadata": {},
    "outputs": [
@@ -162,58 +244,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "urls2022.json\n",
-      "urls2020.json\n",
-      "urls2020.json\n",
-      "urls2024.json\n",
-      "7232326139858111790\n",
-      "7199113085502704939\n",
-      "7292480321919159598\n",
-      "7308516761496784171\n",
-      "7332685812108152110\n",
-      "7279116633581309227\n",
-      "7265084822991719723\n",
-      "7266077970522000682\n",
-      "7135866160519630122\n",
-      "7236141305984863530\n",
-      "7260471849480621358\n",
-      "7099576210782424366\n",
-      "7232326139858111790\n",
-      "7199113085502704939\n",
-      "7292480321919159598\n",
-      "7308516761496784171\n",
-      "7332685812108152110\n",
-      "7279116633581309227\n",
-      "7265084822991719723\n",
-      "7266077970522000682\n",
-      "7135866160519630122\n",
-      "7236141305984863530\n",
-      "7260471849480621358\n",
-      "7099576210782424366\n",
-      "7232326139858111790\n",
-      "7199113085502704939\n",
-      "7292480321919159598\n",
-      "7308516761496784171\n",
-      "7332685812108152110\n",
-      "7279116633581309227\n",
-      "7265084822991719723\n",
-      "7266077970522000682\n",
-      "7135866160519630122\n",
-      "7236141305984863530\n",
-      "7260471849480621358\n",
-      "7099576210782424366\n",
-      "pyktok_csv_files/.DS_Store\n",
-      "urls2024.json\n",
-      "urls2023.json\n",
-      "urls2021.json\n",
-      "urls2023.json\n",
-      "urls2021.json\n"
+      "STARTING FOR YEAR 2020\n",
+      "there should be two files, the filenames are ['results2020_2.csv', 'results2020_1.csv'] and the number of files is: 2\n",
+      "json file isurls2020.json\n",
+      "no of transcript files found: 2\n",
+      "there should be two files, the filenames are ['results2020_2.csv', 'results2020_1.csv'] and the number of files is: 2\n",
+      "adding search term and year to pyktok df\n"
      ]
     }
    ],
    "source": [
-    "modify_csv()"
+    "get_csv('2020')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a17ba47-cf86-426e-bd3b-9340d99be890",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -232,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
