--- a/topic_modelling/Topic Modelling.ipynb
+++ b/topic_modelling/Topic Modelling.ipynb
@@ -5178,7 +5178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 120,
    "id": "3262fc38-7f12-4847-8c77-6f32b42eb1b3",
    "metadata": {
     "scrolled": true
@@ -5190,7 +5190,15 @@
      "text": [
       "Group: Al Shifa Hospital (Gaza Strip)\n",
       "all topics are 7\n",
-      "[  0 198 117 122 194 274 169]\n"
+      "dominant_topic\n",
+      "0      6\n",
+      "198    1\n",
+      "117    1\n",
+      "122    1\n",
+      "194    1\n",
+      "274    1\n",
+      "169    1\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -5201,13 +5209,17 @@
     "    df = group_data\n",
     "    dct = {'search_term' : group_name}\n",
     "\n",
-    "    #unique topics\n",
-    "    all_topics = df['dominant_topic'].unique()\n",
-    "    print(f'all topics are {len(all_topics)}')\n",
-    "    print(df['dominant_topic'].unique())\n",
     "    #all videos\n",
     "    no_of_videos = df.shape[0]\n",
     "    dct['total_videos'] = no_of_videos\n",
+    "\n",
+    "    #unique topics\n",
+    "    all_topics = df['dominant_topic'].value_counts()\n",
+    "    #print(f'all topics are {len(all_topics)}')\n",
+    "    #print(all_topics)\n",
+    "    dct['dominant_topic'] = all_topics.idxmax()\n",
+    "\n",
+    "    dct['']\n",
     "    \n",
     "    \n",
     "    \n",
@@ -5222,8 +5234,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "6b58795e-a330-40d4-bb49-04173543e11b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all_topics.get(all_topics.max()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "ea76501d-250a-4786-b629-256545f5d4b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(all_topics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "6589f0a4-981d-4ddf-8f8c-2c54b6897d26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "dff06fa5-11f1-416e-a2b4-179e4598778c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "198"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98ca0326-550d-4f9d-b017-7682c696a08e",
    "metadata": {},
    "outputs": [],
    "source": []
