--- a/Comparison Analysis/Comparison Analysis.ipynb
+++ b/Comparison Analysis/Comparison Analysis.ipynb
@@ -316,8 +316,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "70c46b25-faa3-4fa3-8642-a8c529122eb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f13da1ca-a76b-40c3-96f8-2b3adb1a3816",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv(\"/Users/ryanboone/Desktop/CS_315/CS-315-Final-Project-main/compiling_data/final_data_by_year/final_result_may.csv\")\n",
+    "df2 = pd.read_csv(\"/Users/ryanboone/Desktop/CS_315/CS-315-Final-Project-main/compiling_data/final_data_by_year/final_result_2023.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2397ca6b-465f-4938-ac30-9b7e0a987d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_terms1 = set(df1['search_term'])\n",
+    "search_terms2 = set(df2['search_term'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fc8b8944-48a5-4d25-ad66-ef131ebddbff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaccard index: 0.95\n"
+     ]
+    }
+   ],
+   "source": [
+    "intersection = len(search_terms1.intersection(search_terms2))\n",
+    "union = len(search_terms1.union(search_terms2))\n",
+    "jaccard_index = intersection / union\n",
+    "\n",
+    "print(\"Jaccard index:\", jaccard_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bf575a2-3585-4793-9540-362cd477b268",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -325,7 +381,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f13da1ca-a76b-40c3-96f8-2b3adb1a3816",
+   "id": "4cbafb4c-2fba-4c82-8939-726e1c2d7193",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a438ef14-5525-4961-89be-1a7363f05c90",
    "metadata": {},
    "outputs": [],
    "source": []
